# streamex

./: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  test.js
.github/workflows/: CI.yml
src/: lib.rs
src/bindings/: bindings.rs
src/core/: adapter.rs  engine.rs  mod.rs  stream.rs  subscription_manager.rs  types.rs
src/exchanges/: mod.rs
src/exchanges/binance/: adapter.rs  model.rs  normalize.rs
src/exchanges/bitfinex/: adapter.rs  mod.rs  model.rs  normalize.rs
src/exchanges/bitget/: adapter.rs  model.rs  normalize.rs
src/exchanges/bitstamp/: adapter.rs  model.rs  normalize.rs
src/exchanges/bybit/: adapter.rs  model.rs  normalize.rs
src/exchanges/coinbase/: adapter.rs  mod.rs  model.rs  normalize.rs
src/exchanges/crypto_com/: adapter.rs  model.rs  normalize.rs
src/exchanges/htx/: adapter.rs  mod.rs  model.rs  normalize.rs
src/exchanges/kraken/: adapter.rs  model.rs  normalize.rs
src/exchanges/okx/: adapter.rs  model.rs  normalize.rs
src/models/: mod.rs  normalized.rs
src/sdk/: mod.rs
